--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ img {
 .manubar {
     width: 100%;
     height: 80px;
-    border-bottom: 1px solid rgba(31, 31, 31, 0.301);
+    border-bottom: 1px solid rgb(31 31 31 / 6%);
     margin-bottom: 5%;
 }
 
