--- a/css/style.css
+++ b/css/style.css
@@ -184,3 +184,36 @@ img {
     text-decoration: none;
     color: rgb(54, 52, 52);
 }
+
+
+/* ....................  */
+
+.formsection {
+    width: 80%;
+    margin: auto;
+}
+
+.sormsectionstart {
+    width: 70%;
+    margin: auto;
+}
+
+.sormsectionstart h3 {
+    padding-bottom: 10px;
+    color: rgb(72, 75, 75);
+}
+
+.sormsectionstart textarea {
+    width: 100%;
+    height: 150px;
+    margin-bottom: 15px;
+}
+
+.sormsectionstart button {
+    background-image: linear-gradient(45deg, rgb(0, 0, 0), rgb(143, 238, 130));
+    padding: 10px 30px;
+    color: white;
+    font-weight: 700;
+    border-radius: 4px;
+    ;
+}
